--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,9 +2,10 @@ cmake_minimum_required(VERSION 3.21)
 project(Textadventure)
 
 
-set(CMAKE_CXX_STANDARD 17)
-include_directories(
-        ./include
-)
+set(CMAKE_CXX_STANDARD 14)
 
-add_executable(untitled main.cpp include/objects.h include/printing.h include/enemies.h ASCII/troll.h)
+#add_executable(textadventure main.cpp include/objects.h include/printing.h include/enemies.h ASCII/troll.h include/common.h)
+
+ADD_EXECUTABLE(${PROJECT_NAME} main.cpp)
+
+TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE ./include/)
