--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ project(Textadventure)
 set(CMAKE_CXX_STANDARD 14)
 
 #add_executable(textadventure main.cpp include/objects.h include/printing.h include/enemies.h ASCII/troll.h include/common.h)
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DDEBUG")
 
 ADD_EXECUTABLE(${PROJECT_NAME} main.cpp include/Player.hpp include/map.hpp include/printing.h include/common.h include/enemies.h include/ASCII/sword.h)
 
