--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,9 +4,30 @@ project(Textadventure)
 
 set(CMAKE_CXX_STANDARD 14)
 
-#add_executable(textadventure main.cpp include/objects.h include/printing.h include/enemies.h ASCII/troll.h include/common.h)
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DDEBUG")
 
-ADD_EXECUTABLE(${PROJECT_NAME} main.cpp include/Player.hpp include/map.hpp include/printing.h include/common.h include/enemies.h include/ASCII/sword.h)
+# Create Library of the source files
+add_library(adventureLib
+        src/Enemy.cpp
+#        include/Enemy.h
+        src/Game.cpp
+#        include/Game.h
+        src/map.cpp
+#        include/map.h
+        src/Player.cpp
+#        include/Player.h
+        include/common.hpp
+        include/printing.hpp
+        )
 
-TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ./include/)
+# Executable of main
+add_executable(${PROJECT_NAME} main.cpp)
+
+# link the library to the executable
+target_link_libraries(${PROJECT_NAME} adventureLib)
+
+# link headers to the library
+target_include_directories(adventureLib PUBLIC include)
+
+#target_include_directories(${PROJECT_NAME} PRIVATE include)
+
